fix modal on mobile

--- a/source/components/Modal/Modal.styl
+++ b/source/components/Modal/Modal.styl
@@ -22,3 +22,6 @@
     position: absolute
     top: 0
     left: 0
+
+  @media (max-width: 780px)
+    right: 0
